fix line spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -12,6 +12,12 @@ main {
 
 }
 
+.gc-drmt p {
+
+  line-height: 1.35em !important;
+}
+
+
 /* fixes these times of tables from the title truncating */
 @media only screen and (min-width: 768px) {
 
